--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="profile__buttons">
                     <div class="profile__buttons-small">
                         <!-- Insert a real number plus country code -->
-                         <a href="https://instagram.com/andiahmadnurmadani?igshid=YmMyMTA2M2Y=" target="_blank" class="button button__small button__gray">
+                         <a href="https://instagram.com/andiahmdnrmdni?igshid=YmMyMTA2M2Y=" target="_blank" class="button button__small button__gray">
                             <i class="ri-instagram-line"></i>
                         <a href="https://wa.me/+6289601730506" target="_blank" class="button button__small button__gray">
                             <i class="ri-whatsapp-line"></i>
