--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>about andi</title>
+        <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="c1db6c9c-3f48-4914-8361-3e7e2632163d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     </head>
     <body>
         <!--=============== HEADER ===============-->
