--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
                     <div class="projects__content grid filters__active" data-content id="projects">
-                       <h4>hai,nama ku andi aku tinggal di garut bersama keluargaku-<br>
-                       saran kalimat dong cuy</h4>
+                       <h4>no words are explained, the website owner is confused :)<br>
+                       -THANKS FOR THE VISIT.</h4>
                     </div>
 
                     <!--=============== SKILLS ===============-->
@@ -227,7 +227,7 @@
         <!--=============== FOOTER ===============-->
         <footer class="footer container">
             <span class="footer__copy">
-                &#169; Bedimcode. All rigths reserved
+                &#169; All rigths reserved
             </span>
         </footer>
 
