--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
                     <div class="projects__content grid filters__active" data-content id="projects">
-                       <h4>no words are explained, the website owner is confused :)<br>
+                       <h4>no words explained, website owner is feeling blue.<br>
                        -THANKS FOR THE VISIT.</h4>
                     </div>
 
