--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
         <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
         
         <!--=============== REMIX ICONS ===============-->
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+          <script src="https://kit.fontawesome.com/325464f2ae.js" crossorigin="anonymous"></script>
 
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>about andi</title>
-        <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="c1db6c9c-3f48-4914-8361-3e7e2632163d";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
     </head>
     <body>
         <!--=============== HEADER ===============-->
@@ -61,15 +60,16 @@
                 <div class="profile__buttons">
                     <div class="profile__buttons-small">
                         <!-- Insert a real number plus country code -->
-                         <a href="https://instagram.com/andiahmdnrmdni?igshid=YmMyMTA2M2Y=" target="_blank" class="button button__small button__gray">
-                            <i class="ri-instagram-line"></i>
-                        <a href="https://wa.me/+6289601730506" target="_blank" class="button button__small button__gray">
-                            <i class="ri-whatsapp-line"></i>
-                        </a>
-                        <a href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">
-                            <i class="ri-telegram-line"></i>
-                        <a href="https://www.linkedin.com/in/andi-ahmad-nurmadani-8a64b3243" target="_blank" class="button button__small button__gray">
-                            <i class="ri-linkedin-box-line"></i>
+                    <a href="https://instagram.com/andiahmadnurmadani?igshid=YmMyMTA2M2Y=" target="_blank" class="button button__small button__gray">             
+                            <i class="fa-brands fa-instagram"></i>
+                    <a href="https://alvo.chat/2PI" target="_blank" class="button button__small button__gray">    
+                            <i class="fa-brands fa-whatsapp"></i>        
+                    <a href="https://vt.tiktok.com/ZSdKAstBu/" target="_blank" class="button button__small button__gray">
+                            <i class="fa-brands fa-tiktok"></i>
+                    <a href="https://www.linkedin.com/in/andi-ahmad-nurmadani-8a64b3243" target="_blank" class="button button__small button__gray">        
+                            <i class="fa-brands fa-linkedin"></i>
+                    <a href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">        
+                            <i class="fa-brands fa-telegram"></i>
                         
    
 
