--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--=============== HEADER ===============-->
         <header class="profile container">
             <!-- Theme button -->
-            <i class="ri-moon-line change-theme" id="theme-button"></i>
+            <i class="fa-solid fa-moon change-theme" id="theme-button"></i>
 
             <div class="profile__container grid">
                 <div class="profile__data">
