--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <i class="ri-whatsapp-fill"></i>
                     <a href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">
                             <i class="ri-telegram-fill"></i>
-                    <a href="https://" target="_blank" class="button button__small button__gray">
+                    <a href="https://www.linkedin.com/in/andi-ahmad-nurmadani-8a64b3243" target="_blank" class="button button__small button__gray">
                             <i class="ri-linkedin-box-fill"></i>
                         
                         
