--- a/index.html
+++ b/index.html
@@ -33,29 +33,29 @@
                     </div>
 
                     <h2 class="profile__name">Andi Ahmad Nurmadani</h2>
-                    <h3 class="profile__profession">Pelajar</h3>
+                    <h3 class="profile__profession">Student</h3>
 
                     <ul class="profile__social">
                     
                     </ul>
                 </div>
 
-                <div class="profile__info grid">
+                 <div class="profile__info grid">
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">16</h3>
+                        <h3 class="profile__info-number">Youth Science Club</h3>
                         <p class="profile__info-description">
-                            Umur
+                            extracurricular
                         </p>
                     </div>
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">SMAN 17 Garut</h3>
                         <p class="profile__info-description">
-                            Sekolah
+                            School
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">KIR</h3>
-                        <p class="profile__info-description">Ekskul</p>
+                        <h3 class="profile__info-number">XI Social Sciences 3</h3>
+                        <p class="profile__info-description">Class</p>
                     </div>
                 </div>
 
@@ -86,7 +86,7 @@
                 <!--=============== FILTERS TABS ===============-->
                 <ul class="filters__content">
                     <button class="filters__button filter-tab-active" data-target="#projects">
-                        About
+                        Album
                     </button>
                     <button class="filters__button" data-target="#skills">
                         Skills
@@ -95,9 +95,65 @@
 
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
-                    <div class="projects__content grid filters__active" data-content id="projects">
-                       <h4>no words explained, website owner is feeling blue.<br>
-                       -THANKS FOR THE VISIT.</h4>
+                     <div class="projects__content grid filters__active" data-content id="projects">
+                        <article class="projects__card">
+                            <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
+                            <img src="assets/img/project1.jpg" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <h3>resssc</h3>
+                                <a aria-label="facebook-icon" href="#"><span class="social-icon facebook-icon"><i></i></span></a>
+                                <div>
+                                    <span class="projects__subtitle">Web</span>
+                                    <h3 class="projects__title">Payment Site</h3>
+                                    <a href="#" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
+                            <img src="assets/img/project2.jpg" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Web</span>
+                                    <h3 class="projects__title">Portfolio website</h3>
+                                    <a href="#" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
+                            <img src="assets/img/project3.jpg" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Movil</span>
+                                    <h3 class="projects__title">Fast food app</h3>
+                                    <a href="#" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
+                            <img src="assets/img/project4.jpg" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Movil</span>
+                                    <h3 class="projects__title">Travel app</h3>
+                                    <a href="#" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
                     </div>
 
                     <!--=============== SKILLS ===============-->
