--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </div>
 
                     <h2 class="profile__name">Andi Ahmad Nurmadani</h2>
-                    <h3 class="profile__profession">Student</h3>
+                    <h3 class="profile__profession"></h3>
 
                     <ul class="profile__social">
                     
@@ -42,20 +42,20 @@
 
                  <div class="profile__info grid">
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">Youth Science Club</h3>
+                        <h3 class="profile__info-number">KIR</h3>
                         <p class="profile__info-description">
-                            extracurricular
+                            ekskul
                         </p>
                     </div>
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">SMAN 17 Garut</h3>
                         <p class="profile__info-description">
-                            School
+                            Sekolah
                         </p>
                     </div>
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">XI Social Sciences 3</h3>
-                        <p class="profile__info-description">Class</p>
+                        <h3 class="profile__info-number">XI IPS 3</h3>
+                        <p class="profile__info-description">Kelas</p>
                     </div>
                 </div>
 
@@ -86,7 +86,7 @@
                 <!--=============== FILTERS TABS ===============-->
                 <ul class="filters__content">
                     <button class="filters__button filter-tab-active" data-target="#projects">
-                        Album
+                        About
                     </button>
                     <button class="filters__button" data-target="#skills">
                         Skills
@@ -96,64 +96,9 @@
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
                      <div class="projects__content grid filters__active" data-content id="projects">
-                        <article class="projects__card">
-                            <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/project1.jpg" alt="" class="projects__img">
-
-                            <div class="projects__modal">
-                                <h3>resssc</h3>
-                                <a aria-label="facebook-icon" href="#"><span class="social-icon facebook-icon"><i></i></span></a>
-                                <div>
-                                    <span class="projects__subtitle">Web</span>
-                                    <h3 class="projects__title">Payment Site</h3>
-                                    <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </article>
-
-                        <article class="projects__card">
-                            <img src="assets/img/project2.jpg" alt="" class="projects__img">
-
-                            <div class="projects__modal">
-                                <div>
-                                    <span class="projects__subtitle">Web</span>
-                                    <h3 class="projects__title">Portfolio website</h3>
-                                    <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </article>
-
-                        <article class="projects__card">
-                            <img src="assets/img/project3.jpg" alt="" class="projects__img">
-
-                            <div class="projects__modal">
-                                <div>
-                                    <span class="projects__subtitle">Movil</span>
-                                    <h3 class="projects__title">Fast food app</h3>
-                                    <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </article>
-
-                        <article class="projects__card">
-                            <img src="assets/img/project4.jpg" alt="" class="projects__img">
-
-                            <div class="projects__modal">
-                                <div>
-                                    <span class="projects__subtitle">Movil</span>
-                                    <h3 class="projects__title">Travel app</h3>
-                                    <a href="#" class="projects__button button button__small">
-                                        <i class="ri-link"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </article>
+                      <h4 style="text-align: center;">hii welcome to my website, introduce my name andi ahmad nurmadani, can be called andi, i study at Senior High School 17 garut, in class eleventh grade social science 3, my hobby is playing games and a little like programming, in the future i want to study in one of the university in Bandung with a major in informatics engineering or management, and of course I aspire to work in a startup company in Jakarta. <br>
+                        thank you for visiting have a nice day   &#9749; &#128075;<br> <br>
+                    <p> "i'm not perfect"</p></h4>
                     </div>
 
                     <!--=============== SKILLS ===============-->
