--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
                      <div class="projects__content grid filters__active" data-content id="projects">
-                      <h4 style="text-align: center;">hii welcome to my website, introduce my name andi ahmad nurmadani, can be called andi, i study at Senior High School 17 garut, in class eleventh grade social science 3, my hobby is playing games and a little like programming, in the future i want to study in one of the university in Bandung with a major in informatics engineering or management, and of course I aspire to work in a startup company in Jakarta. <br>
+                      <h4 style="text-align: center;">hii welcome to my website, introduce my name andi ahmad nurmadani, can be called andi, i study at Senior High School 17 garut, in class eleventh grade social science 3, my hobby is playing games and a little like programming. <br>
                         thank you for visiting have a nice day   &#9749; &#128075;<br> <br>
                     <p> "i'm not perfect"</p></h4>
                     </div>
