--- a/index.html
+++ b/index.html
@@ -62,14 +62,17 @@
                 <div class="profile__buttons">
                     <div class="profile__buttons-small">
                         <!-- Insert a real number plus country code -->
-                    <a href="https://instagram.com/andiahmdnrmdni?igshid=YmMyMTA2M2Y=" target="_blank" class="button button__small button__gray">
+                    <a target="_blank" href="https://instagram.com/andiahmdnrmdni?igshid=YmMyMTA2M2Y=" target="_blank" class="button button__small button__gray">
                             <i class="ri-instagram-fill"></i>
-                    <a href="https://wa.me/+6289601730506" target="_blank" class="button button__small button__gray">
+                    <a target="_blank" href="https://wa.me/+6289601730506" target="_blank" class="button button__small button__gray">
                             <i class="ri-whatsapp-fill"></i>
-                    <a href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">
+                             <a target="_blank" href="music player/index.html" class="button button__small button__gray">
+                           <i class="ri-music-2-fill"></i>
+                    <a target="_blank" href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">
                             <i class="ri-telegram-fill"></i>
-                    <a href="https://www.linkedin.com/in/andi-ahmad-nurmadani-8a64b3243" target="_blank" class="button button__small button__gray">
+                    <a target="_blank" href="https://www.linkedin.com/in/andi-ahmad-nurmadani-8a64b3243" target="_blank" class="button button__small button__gray">
                             <i class="ri-linkedin-box-fill"></i>
+
                         
                         
    
@@ -96,7 +99,7 @@
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
                      <div class="projects__content grid filters__active" data-content id="projects">
-                      <h4 style="text-align: center;">hii welcome to my website, introduce my name andi ahmad nurmadani, can be called andi, i study at Senior High School 17 garut, in class eleventh grade social science 3, my hobby is playing games and a little like programming. <br>
+                      <h4 style="text-align: center;" style="justify-content: center;">hii welcome to my website, introduce my name andi ahmad nurmadani, can be called andi, i study at Senior High School 17 garut, in class eleventh social science 3, my hobby is playing games and a little like programming. <br>
                         thank you for visiting have a nice day   &#9749; &#128075;<br> <br>
                     <p> "i'm not perfect"</p></h4>
                     </div>
