--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
                      <div class="projects__content grid filters__active" data-content id="projects">
-                      <h4 style="text-align: center;" style="justify-content: center;">hii welcome to my website, introduce my name andi ahmad nurmadani, can be called andi, i study at Senior High School 17 garut, in class eleventh social science 3, my hobby is playing games and a little like programming. <br>
+                      <h4 style="text-align: center;" style="justify-content: center;">hii welcome to my website, introduce my name andi ahmad nurmadani, can be called andi, i study at Senior High School 17 garut, in class eleventh social science 3, my hobby is playing games and programming. <br>
                         thank you for visiting have a nice day   &#9749; &#128075;<br> <br>
-                    <p> "i'm not perfect"</p></h4>
+                    </h4>
                     </div>
 
                     <!--=============== SKILLS ===============-->
