--- a/music player/index.html
+++ b/music player/index.html
@@ -12,7 +12,7 @@
   <div class="wrapper">
     <div class="top-bar">
     
-      <span style="margin-left: 7rem;">my project</span>
+      <span style="margin-left: 4rem;">have a good study :]</span>
     
     </div>
     <div class="img-area">
