--- a/index.html
+++ b/index.html
@@ -66,17 +66,13 @@
                             <i class="ri-instagram-fill"></i>
                     <a target="_blank" href="https://wa.me/+6289601730506" target="_blank" class="button button__small button__gray">
                             <i class="ri-whatsapp-fill"></i>
-                    <a style="margin-left:1rem;" target="_blank" href="music player/index.html" class="button button__small button__gray">
+                    <a target="_blank" href="music player/index.html" class="button button__small button__gray">
                            <i class="ri-music-2-fill"></i>
                     <a target="_blank" href="Quizz/index.html" target="_blank" class="button button__small button__gray">
-                            <i class="ri-question-answer-fill"></i>  
-                    <a target="_blank" href="Typing Speed Game/index.html" target="_blank" class="button button__small button__gray">
-                            <i class="ri-keyboard-box-fill"></i>   
+                            <i class="ri-question-answer-fill"></i>    
                     <a target="_blank" href="Pixel Art Generator/index.html" target="_blank" class="button button__small button__gray">
                             <i class="ri-paint-fill"></i> 
-                    <a target="_blank" href="Note/index.html" target="_blank" class="button button__small button__gray">
-                            <i class="ri-draft-fill"></i>                
-                    <a style="margin-left:1rem;" target="_blank" href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">
+                    <a target="_blank" href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">
                             <i class="ri-telegram-fill"></i>
                     <a target="_blank" href="https://www.linkedin.com/in/andi-ahmad-nurmadani-8a64b3243" target="_blank" class="button button__small button__gray">
                             <i class="ri-linkedin-box-fill"></i>
