--- a/index.html
+++ b/index.html
@@ -64,16 +64,14 @@
                         <!-- Insert a real number plus country code -->
                     <a target="_blank" href="https://instagram.com/andiahmdnrmdni?igshid=YmMyMTA2M2Y=" target="_blank" class="button button__small button__gray">
                             <i class="ri-instagram-fill"></i>
-                    <a target="_blank" href="https://wa.me/+6289601730506" target="_blank" class="button button__small button__gray">
-                            <i class="ri-whatsapp-fill"></i>
+                    <a target="_blank" href="codepicture/index.html" target="_blank" class="button button__small button__gray">
+                            <i class="ri-code-line"></i>
                     <a target="_blank" href="music player/index.html" class="button button__small button__gray">
                            <i class="ri-music-2-fill"></i>
                     <a target="_blank" href="Quizz/index.html" target="_blank" class="button button__small button__gray">
                             <i class="ri-question-answer-fill"></i>    
                     <a target="_blank" href="Pixel Art Generator/index.html" target="_blank" class="button button__small button__gray">
                             <i class="ri-paint-fill"></i> 
-                    <a target="_blank" href="https://t.me/andiahmadnurmadani" target="_blank" class="button button__small button__gray">
-                            <i class="ri-telegram-fill"></i>
                     <a target="_blank" href="https://www.linkedin.com/in/andi-ahmad-nurmadani-8a64b3243" target="_blank" class="button button__small button__gray">
                             <i class="ri-linkedin-box-fill"></i>
 
