--- a/music player/index.html
+++ b/music player/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +11,7 @@
   <div class="wrapper">
     <div class="top-bar">
     
-      <span style="margin-left: 9rem;">" hi "</span>
+      <span style="margin-left: 9rem;">"??"</span>
     
     </div>
     <div class="img-area">
