--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <i class="ri-instagram-fill"></i>
                     <a target="_blank" href="codepicture/index.html" target="_blank" class="button button__small button__gray">
                             <i class="ri-terminal-window-fill"></i>
-                    <a target="_blank" href="music player/index.html" class="button button__small button__gray">
+                    <a target="_blank" href="Music/index.html" class="button button__small button__gray">
                            <i class="ri-headphone-fill"></i>
                     <a target="_blank" href="Quizz/index.html" target="_blank" class="button button__small button__gray">
                             <i class="ri-question-answer-fill"></i>    
